--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bienvenue sur mon site !</h1>
+    <h1>Mon site a été mis à jour</h1>
     <p>Déployé automatiquement avec GitHub Actions.</p>
 </body>
 </html>
