--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <h1>Mon site a été mis à jour</h1>
+      <h1>Nous sommes le 18 avril</h1>
     <p>Déployé automatiquement avec GitHub Actions.</p>
 </body>
 </html>
